<resources>
    <string name="app_name">AwesomeFrame</string>
    <string name="app_desc">AwesomeFrame是一款聚集了目前安卓开发中常用的流行UI框架的应用</string>

    <!-- 主界面Fragment -->
    <string name="main_nav_index">首页</string>
    <string name="main_nav_found">发现</string>
    <string name="main_nav_user">我的</string>

    <!-- 通用 -->
    <string name="http_error">网络君乘404航班去追寻诗和远方了</string>
    <string name="http_retry">重试中</string>

    <!-- 发现页 -->
    <string name="found_navigation">Navigation</string>
    <string name="found_list">List</string>
    <string name="found_card">Card</string>
    <string name="found_dialog">Dialog</string>
    <string name="found_tab">Tab</string>
    <string name="found_pick">Pick</string>
    <string name="found_refresh">Refresh</string>
    <string name="found_popup">Popup</string>
    <string name="found_banner">Banner</string>

    <!-- Card -->
    <string name="card_folding_cell">folding-cell-android</string>
    <string name="card_swipe_stack">SwipeStack</string>
    <string name="card_stack">CardStack</string>
    <string name="card_menu_all_down">All down</string>
    <string name="card_menu_up_down">Up down</string>
    <string name="card_menu_up_down_stack">Up down stack</string>
    <string name="card_pre">上一张</string>
    <string name="card_next">下一张</string>

    <!-- Dialog -->
    <string name="dialog_rxtool_dialog">RxToolDialog</string>
    <string name="dialog_sweet_alert">SweetAlertDialog</string>

    <!-- Pick -->
    <string name="pick_android_pick_view">Android-PickerView</string>
    <string name="pick_city_pick">CityPicker</string>

    <!-- Refresh -->
    <string name="refresh_smart_refresh">SmartRefreshLayout</string>

    <!-- Banner -->
    <string name="banner">banner</string>
    <string name="banner_bga">BGABanner-Android</string>

    <!-- 用户页 -->
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="rate">评价</string>
    <string name="feedback">反馈</string>
    <string name="share">分享</string>
    <string name="donate">捐赠</string>

    <!-- 登录注册 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_other">其它登录方式</string>

    <!-- 设置 -->
    <string name="auto_cache">自动缓存</string>
    <string name="clear_cache">清除缓存</string>
    <string name="auto_update">自动检查更新</string>
    <string name="theme_color">主题颜色</string>
    <string name="night_mode">夜间模式</string>
    <string name="language">多语言</string>

    <!-- 语言 -->
    <string name="language_auto">跟随系统</string>
    <string name="language_simplified">简体中文</string>
    <string name="language_traditional">繁体中文</string>
    <string name="language_english">英语</string>


    <!-- 捐赠 -->
    <string name="pay_app_pay">AppPay</string>
    <string name="pay_rxtool_pay">RxToolPay</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_error">支付错误</string>
    <string name="pay_cancel">用户取消</string>

    <!-- 评价 -->
    <string name="rate_android_rate">Android-RateThisApp</string>
    <string name="rate_title">请为AwesomeFrame评价</string>
    <string name="rate_message">如果你喜欢AwesomeFrame，请花一分钟不到的时间为AwesomeFrame打好评。谢谢你们的支持！</string>
    <string name="rate_no">不用了，谢谢</string>
    <string name="rate_later">稍后再说</string>
</resources>
