<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.user.UserFragment">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:title="@string/main_nav_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hurley.awesomeframe.widget.SettingBar
            android:id="@+id/sb_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_30"
            app:bar_leftText="@string/setting"
            app:bar_rightIcon="@mipmap/icon_arrow_right"/>

        <com.hurley.awesomeframe.widget.SettingBar
            android:id="@+id/sb_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_30"
            app:bar_leftText="@string/rate"
            app:bar_rightIcon="@mipmap/icon_arrow_right"/>

        <com.hurley.awesomeframe.widget.SettingBar
            android:id="@+id/sb_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftText="@string/feedback"
            app:bar_rightIcon="@mipmap/icon_arrow_right"/>

        <com.hurley.awesomeframe.widget.SettingBar
            android:id="@+id/sb_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftText="@string/share"
            app:bar_rightIcon="@mipmap/icon_arrow_right"/>

        <com.hurley.awesomeframe.widget.SettingBar
            android:id="@+id/sb_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_30"
            app:bar_leftText="@string/donate"
            app:bar_rightIcon="@mipmap/icon_arrow_right"/>

        <com.hurley.awesomeframe.widget.SettingBar
            android:id="@+id/sb_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftText="@string/about"
            app:bar_rightIcon="@mipmap/icon_arrow_right"/>
    </LinearLayout>
</LinearLayout>