<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".feature.found.card.CardStackActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_stack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/card_stack" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPreClick"
            android:text="@string/card_pre"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNextClick"
            android:text="@string/card_next"/>

    </LinearLayout>

    <com.vondear.rxui.view.cardstack.RxCardStackView
        android:id="@+id/card_stack_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"/>
</LinearLayout>
