<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".feature.user.login.LoginActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title=""
        app:rightTitle="@string/register"
        app:rightColor="@color/colorAccent"
        app:barStyle="transparent"/>

    <com.hurley.awesomeframe.widget.SquareImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/space_200"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_60"
        android:src="@mipmap/ic_launcher"/>

    <com.hurley.awesomeframe.widget.ClearEditText
        android:id="@+id/et_login_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_80"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_80"
        android:hint="请输入手机号"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"/>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginRight="@dimen/space_80" />

    <com.hurley.awesomeframe.widget.ClearEditText
        android:id="@+id/et_login_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginRight="@dimen/space_80"
        android:hint="请输入密码"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginRight="@dimen/space_80" />

    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/space_80"
        android:layout_marginTop="@dimen/space_30"
        android:layout_marginEnd="@dimen/space_120"
        android:text="@string/login_forget"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_60"
        android:layout_marginRight="@dimen/space_80"
        android:text="@string/login" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_100"
        android:layout_marginRight="@dimen/space_100"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            style="@style/HorizontalLineStyle"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_30"
            android:layout_marginRight="@dimen/space_30"
            android:text="@string/login_other"
            android:textColor="@color/black50" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_100"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginRight="@dimen/space_100"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_login_qq" />

        <ImageView
            android:id="@+id/iv_login_wx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_login_wx" />

        <ImageView
            android:id="@+id/iv_login_wb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_login_weibo" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>